--- a/form2.html
+++ b/form2.html
@@ -59,18 +59,19 @@
 </head>
 <body>
     <center>
+        <a href="index.html"><h1>Form1</h1></a>
     <div class="main">
         <div class="card">
         <h1>Responsive Register <br>Form</h1>
         <div class="inputemail">
-        <input type="email" name="" id="email">
-<i class="fa-solid fa-envelope"></i>
+        <input type="email" name="" id="email" placeholder=" Email"> 
+<!-- <i class="fa-solid fa-envelope"></i> -->
     </div>
         <br><br>
-        <input type="password" name="" id="email"><br><br>
-        <input type="password" name="" id="email"><br><br>
-        <input type="text" name="" id="first">
-        <input type="text" name="" id="last">
+        <input type="password" name="" id="email" placeholder=" Password"><br><br>
+        <input type="password" name="" id="email" placeholder=" Re-type Password"><br><br>
+        <input type="text" name="" id="first" placeholder=" First Name">
+        <input type="text" name="" id="last"  placeholder=" Last Name">
         <br><br>
         <div class="radio">
         <input type="radio" name="gender" id="Male" value="m"><label for="" id="Male">Male</label>
